--- a/.lab/method.ipynb
+++ b/.lab/method.ipynb
@@ -2,52 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/iurii/Projects/SkyANT/Python/scrapper/.venv/dev/lib/python3.10/site-packages/requests/__init__.py:109: RequestsDependencyWarning: urllib3 (1.26.12) or chardet (None)/charset_normalizer (3.0.0) doesn't match a supported version!\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
-    "from enum import Enum, unique\n",
-    "\n",
-    "@unique\n",
-    "class Method(Enum):\n",
-    "    '''\n",
-    "    '''\n",
-    "\n",
-    "    MOUSE = 'mouse'\n",
-    "    ENTER = 'enter'\n",
-    "    SPACE = 'space'\n",
-    "\n",
-    "    def __str__(self):\n",
-    "        return self.value\n",
-    "\n",
-    "    def __call__(self):\n",
-    "        return self.value"
+    "from skyant.scrapper import Loader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "ss = '<div><div>sd</div><div><p>5</p></div></div><p></p>'\n",
+    "x = html.fromstring(ss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "lxml.html.HtmlElement"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Method.MOUSE == Method.MOUSE"
+    "type(x)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.10.5 ('dev': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -61,12 +69,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "949777d72b0d2535278d3dc13498b2535136f6dfe0678499012e853ee9abcab1"
+    "hash": "521405d6406cb17c60db494b59683e02d34e11ef46a33d9655722e7986728781"
    }
   }
  },
